--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,6 +3,11 @@ body {
   margin:  0px;
 }
 
+a {
+  text-decoration-line: none !important;
+  display: block;
+  line-height: 0px;
+}
 .button {
   &__wrapper {
     max-width: 40px;
