--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
-$border-color: rgba(222, 195, 255, 0.18);
+$border-color: rgba(154, 128, 184, 0.329);
 $background-item: #ffffff;
-$background:#EFF3FF;
+$background: #f6f3fa;
 $color-el-primary: #191651;
 $color-primary: #9eafe0;
 $color-primary-focus: #1E88E5D8;
@@ -9,7 +9,7 @@ $color-primary-plain: #1E88E50D;
 $color-primary-plain-hover: #1E88E5BF;
 $color-primary-plain-focus: #1E88E519;
 $color-disabled: #37474F26;
-$disabled-text: #37474F7F;
+$disabled-text: #2f363a7f;
 $color-text: #EFF3FF;
 $red: #F44336;
 $el-color-red: #f56c6c;
