--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,6 +1,7 @@
 @import './variables';
 body {
   margin:  0px;
+  background-color: $background-item;
 }
 
 a {
@@ -110,5 +111,22 @@ a {
     &:focus {
       color: $el-color-red !important;
     }
+  }
+}
+.catalog {
+  &__title {
+    width: 100%;
+    max-width: 480px;
+    font-size: 13px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: $disabled-text;
+  }
+  &__price {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    text-transform: uppercase;
+    color: $el-color-red;
   }
 }
