--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -104,7 +104,7 @@ a {
     color: $color-primary-focus !important;
   }
   &--red {
-    color: $red;
+    color: $accent-accent;
     &:hover {
       color: $el-color-red;
     }
