--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -10,6 +10,6 @@ $color-primary-plain-hover: #1E88E5BF;
 $color-primary-plain-focus: #1E88E519;
 $color-disabled: #37474F26;
 $disabled-text: #2f363a7f;
-$color-text: #EFF3FF;
-$red: #F44336;
+$color-text: #37474f;
+$accent-accent: #FFE28C;
 $el-color-red: #f56c6c;
