--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 $border-color: rgba(154, 128, 184, 0.329);
 $background-item: #ffffff;
-$background: #f6f3fa;
+$background: #e9e9f7;
 $color-el-primary: #191651;
 $color-primary: #9eafe0;
 $color-primary-focus: #1E88E5D8;
